# championship-history-comparison

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
data/: playoff_overrides.json  warehouse.db
data/reports/: backfill_coverage.json  health_snapshot.json  leaderboard.json  quality_report.json  reconciliation_summary.json
docs/: api-contracts.md  data-contracts.md  id-resolution-policy.md  managers_template.csv  operations.md  parser-rule-checklist.md  scorers_template.csv  source-mapping.md
migrations/: 001_init.sql  002_ranking_grain_change.sql  005_add_wdl_stats.sql  006_add_matches.sql
scoring/versioned-configs/: v1.json
scripts/: ingest_matches.py  nightly_refresh.sh
src/warehouse/: __init__.py  __main__.py  analytics.py  api_server.py  canonicalize.py  cli.py  config.py  connectors.py  context.py  db.py  loaders.py  migrations.py  models.py  operations.py  parsers.py  pipeline.py  quality.py  reconcile.py
web/: app.js  column-studio.html  column_injector.js  column_studio.js  index.html  styles.css
